# DeclarativeClientServerArchitecture

./: README.md
client/: Cargo.toml  package-lock.json  package.json
client/src/: lib.rs  types.rs
database/: LICENSE.md  rebar.config
database/Mnesia.nonode@nohost/: db_fakultet.DCD  db_fakultet.DCL  db_fakultet_katedra.DCD  db_fakultet_katedra.DCL  db_katedra.DCD  db_katedra.DCL  db_katedra_kolegij.DCL  db_kolegij.DCD  db_kolegij.DCL  db_kolegij_sekcija.DCD  db_kolegij_sekcija.DCL  db_korisnik.DCD  db_korisnik.DCL  db_sadrzaj.DCL  db_sekcija.DCD  db_sekcija.DCL  db_sekcija_sadrzaj.DCL  db_student_kolegij.DCD
database/include/: records.hrl
database/src/: content.erl  course.erl  database.app.src  database.erl  department.erl  djelatnik_kolegij.erl  faculty.erl  fakultet.erl  fakultet_katedra.erl  fakultet_korisnik.erl  katedra.erl  katedra_djelatnik.erl  katedra_kolegij.erl  kolegij.erl  kolegij_sekcija.erl  korisnik.erl  kviz.erl  kviz_student.erl  mock.erl  operations.erl  pitanje.erl  question.erl  quiz.erl  sadrzaj.erl  section.erl  sekcija.erl  sekcija_sadrzaj.erl  student_kolegij.erl  user.erl
database/test/: database_SUITE.erl
server/: rebar.config  ttb_last_config
server/Mnesia.client@nixos/: db_djelatnik_kolegij.DCD  db_djelatnik_kolegij.DCL  db_fakultet.DCD  db_fakultet.DCL  db_fakultet_katedra.DCD  db_fakultet_katedra.DCL  db_fakultet_korisnik.DCD  db_fakultet_korisnik.DCL  db_katedra.DCD  db_katedra.DCL  db_katedra_djelatnik.DCD  db_katedra_djelatnik.DCL  (+18 more)
spec/: Ustanova.md
webapp/: angular.json  package-lock.json  package.json
(+199 files in other folders)
