[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12", features =["json"]}
wasm-bindgen = "0.2.49"
wasm-bindgen-futures = "0.4.1"
serde = {version = "1.0.101", features = ["derive"]}
serde-wasm-bindgen = "0.5"
serde_json = "1.0.122"
web-sys = {version = "0.3", features = ["Window","Storage"]}

[lib]
crate-type = ["cdylib"]
